# quanclean

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  output.rs
crates/cli/src/commands/: clean.rs  duplicates.rs  mod.rs  scan.rs
crates/core/: Cargo.toml
crates/core/src/: cleaner.rs  duplicates.rs  error.rs  lib.rs  scanner.rs  types.rs
locales/en/: common.json
locales/zh-CN/: common.json
scripts/: gen-icons.mjs
src/: App.module.css  App.tsx  i18n.ts  index.css  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: CategoryList.module.css  CategoryList.tsx  ConfirmDialog.module.css  ConfirmDialog.tsx  Sidebar.module.css  Sidebar.tsx  Treemap.module.css  Treemap.tsx
src/hooks/: useScan.ts
src/lib/: format.test.ts  format.ts  tauri.ts  types.ts
src/pages/: DashboardPage.module.css  DashboardPage.tsx  ScanPage.module.css  ScanPage.tsx  SettingsPage.module.css  SettingsPage.tsx
